--- a/servicesdata.properties
+++ b/servicesdata.properties
@@ -3,7 +3,7 @@ spring.datasource.driver-class-name1=oracle.jdbc.OracleDriver
 spring.datasource.url1=jdbc:oracle:thin:@//localhost:1521/xe
 spring.datasource.username1=cdevaws
 spring.datasource.password1=12345
-arangodb.hosts=127.0.0.1
-arangodb.port=8529
-arangodb.user=root
-arangodb.password=
+arangodb.hosts1=127.0.0.1
+arangodb.port1=8529
+arangodb.user1=root
+arangodb.password1=
