--- a/servicesdata.properties
+++ b/servicesdata.properties
@@ -5,5 +5,6 @@ spring.datasource.username1=cdevaws
 spring.datasource.password1=12345
 arangodb.hosts1=127.0.0.1
 arangodb.port1=8529
+arangodb.database1=jzmeters
 arangodb.user1=root
 arangodb.password1=
